[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashvsr-ultra-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=1.2.3",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "triton>=3.5.1 ; sys_platform != 'win32'",
    "triton-windows>=3.5.1.post22 ; sys_platform == 'win32'",
    "spas_sage_attn",
    "sageattention",
    "block_sparse_attn",
]

[tool.uv.sources]
spas_sage_attn = { git = "https://github.com/thu-ml/SpargeAttn.git" }
sageattention = { git = "https://github.com/thu-ml/SageAttention.git" }
block_sparse_attn = { git = "https://github.com/mit-han-lab/Block-Sparse-Attention.git" }

[tool.uv.extra-build-dependencies]
spas_sage_attn = ["torch", "ninja", "numpy"]
sageattention = ["torch", "ninja", "numpy"]
block_sparse_attn = ["torch", "ninja", "packaging"]

[dependency-groups]
dev = ["jupyter>=1.1.1", "matplotlib>=3.10.8"]
